# cookiecutter-home-assistant-custom-component

./: README.md  cookiecutter.json  requirements_dev.txt
.github/: renovate.json5
.github/workflow/: renovate.json5  test.yaml
home-assistant-{{ cookiecutter.project_name }}/: .gitignore  .pre-commit-config.yaml  README.md  hacs.json  requirements_dev.txt
home-assistant-{{ cookiecutter.project_name }}/.agent/skills/developer/: SKILL.md
home-assistant-{{ cookiecutter.project_name }}/.devcontainer/: devcontainer.json
home-assistant-{{ cookiecutter.project_name }}/.github/: renovate.json5
home-assistant-{{ cookiecutter.project_name }}/.github/workflows/: cruft.yaml  hacs.yaml  lint.yaml  test.yaml
home-assistant-{{ cookiecutter.project_name }}/custom_components/{{ cookiecutter.domain }}/: __init__.py  config_flow.py  const.py  manifest.json
home-assistant-{{ cookiecutter.project_name }}/tests/: conftest.py  test_config_flow.py  test_init.py
{{ cookiecutter.project_name }}/: .pre-commit-config.yaml  requirements_dev.txt  setup.cfg
{{ cookiecutter.project_name }}/.github/workflows/: lint.yaml  pages.yaml  publish.yaml  test.yaml
{{ cookiecutter.project_name }}/custom_components/{{ cookiecutter.project_name }}/: __init__.py  config_flow.py  manifest.json
{{ cookiecutter.project_name }}/custom_components/{{ cookiecutter.project_name }}/translations/: en.json
{{ cookiecutter.project_name }}/tests/: __init__.py  conftest.py  test_config_flow.py  test_init.py
