[metadata]
name = {{ cookiecutter.project_name }}
version = {{ cookiecutter.version }}
description = {{ cookiecutter.description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}
author = Allen Porter
author_email = {{ cookiecutter.email }}
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.12
install_requires =
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[options.package_data]
{{ cookiecutter.project_name }} = py.typed
